# my_companies_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/product_review_crew/: crew.py  main.py
src/product_review_crew/config/: agents.yaml  review_details.yaml  tasks.yaml
src/product_review_crew/tools/: scrape_website_tool.py  serper_dev_tool.py
src/research_crew/: crew.py  main.py
src/supplement_review_crew/: crew.py  main.py
src/supplement_review_crew/config/: agents.yaml  tasks.yaml
